correcting style on mobile devices

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
 
 .container {
   width: 40%;
-  max-height: 60%;
+  max-height: 70%;
   background: #448aff;
   border-radius: 30px;
   padding: 30px;
@@ -135,9 +135,27 @@ input[type="number"] {
   input {
     margin: 10px 0;
   }
-
-  .generate-btn {
-    margin: 0;
-    margin-bottom: 15px;
-  }
 }
+
+@media only screen and (max-width: 430px) {
+  .app {
+    justify-content: space-between;
+  }
+
+  h1 {
+    margin: 10px;
+  }
+
+  .container {
+    padding: 10px 5px;
+    width: 100%;
+    max-height: none;
+    height: 95%;
+    border-radius: 0;
+    justify-content: center;
+  }
+
+  .numbers {
+    max-height: 40%;
+  }
+ }
